--- a/env_v1.yml
+++ b/env_v1.yml
@@ -106,12 +106,14 @@ dependencies:
       - asgiref==3.8.1
       - blis==0.7.11
       - catalogue==2.0.10
+      - chardet==5.2.0
       - charset-normalizer==3.3.2
       - click==8.1.7
       - cloudpathlib==0.16.0
       - confection==0.1.4
       - cymem==2.0.8
       - django==5.0.4
+      - en-core-web-sm==3.7.1
       - idna==3.7
       - langcodes==3.4.0
       - language-data==1.2.0
