--- a/Final_env.yml
+++ b/Final_env.yml
@@ -7,7 +7,6 @@ dependencies:
   - argon2-cffi-bindings=21.2.0=py311h2bbff1b_0
   - asttokens=2.0.5=pyhd3eb1b0_0
   - async-lru=2.0.4=py311haa95532_0
-  - attrs=23.1.0=py311haa95532_0
   - babel=2.11.0=py311haa95532_0
   - beautifulsoup4=4.12.2=py311haa95532_0
   - bleach=4.1.0=pyhd3eb1b0_0
@@ -104,10 +103,13 @@ dependencies:
   - pip:
       - annotated-types==0.6.0
       - asgiref==3.8.1
+      - attrs==23.2.0
       - blis==0.7.11
       - catalogue==2.0.10
       - chardet==5.2.0
       - charset-normalizer==3.3.2
+      - chromedriver-autoinstaller==0.6.4
+      - chromedriver-py==125.0.6422.78
       - click==8.1.7
       - cloudpathlib==0.16.0
       - confection==0.1.4
@@ -118,16 +120,22 @@ dependencies:
       - en-core-web-sm==3.7.1
       - fonttools==4.51.0
       - fuzzywuzzy==0.18.0
+      - h11==0.14.0
       - idna==3.7
       - joblib==1.4.2
       - kiwisolver==1.4.5
       - langcodes==3.4.0
       - language-data==1.2.0
+      - lazypredict==0.2.12
+      - lightgbm==4.3.0
       - marisa-trie==1.1.0
+      - markdown-it-py==3.0.0
       - markupsafe==2.1.5
       - matplotlib==3.8.4
+      - mdurl==0.1.2
       - murmurhash==1.0.10
       - numpy==1.26.4
+      - outcome==1.3.0.post0
       - packaging==24.0
       - pandas==2.2.2
       - pillow==10.3.0
@@ -135,9 +143,12 @@ dependencies:
       - pydantic==2.7.1
       - pydantic-core==2.18.2
       - pyparsing==3.1.2
+      - python-dotenv==1.0.1
       - scikit-learn==1.4.2
       - scipy==1.13.0
+      - selenium==4.21.0
       - smart-open==6.4.0
+      - sortedcontainers==2.4.0
       - spacy==3.7.4
       - spacy-legacy==3.0.12
       - spacy-loggers==1.0.5
@@ -146,10 +157,15 @@ dependencies:
       - thinc==8.2.3
       - threadpoolctl==3.5.0
       - tqdm==4.66.2
+      - trio==0.25.1
+      - trio-websocket==0.11.1
       - typer==0.9.4
       - typing-extensions==4.11.0
       - tzdata==2024.1
       - urllib3==2.2.1
       - wasabi==1.1.2
       - weasel==0.3.4
+      - webdriver-manager==4.0.1
+      - wsproto==1.2.0
+      - xgboost==2.0.3
 prefix: C:\Users\ryanl\anaconda3\envs\django-env-ai
